Migrate Java from 1.8 to 11